--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment:2.5.2")
     implementation('androidx.navigation:navigation-ui:2.5.2')
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.core:core-ktx:+'
 
     androidTestImplementation 'androidx.test:core-ktx:1.4.0'
     // Kotlin
